--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 dependencies = [
   "click>=8.2.1",
   "fastapi[standard]>=0.116.1",
+  "ibis-framework[duckdb]>=10.8.0",
+  "jinja2>=3.1.0",
+  "pandas>=2.3.1",
   "prometheus-fastapi-instrumentator>=7.1.0",
   "pymc>=5.25.1",
   "python-jose>=3.5.0",
@@ -14,7 +17,7 @@ requires-python = ">=3.13"
 version = "0.1.0"
 
 [project.scripts]
-pv = "pymc_vibes.cli:main"
+pv = "pymc_vibes.client.cli:main"
 
 [build-system]
 build-backend = "setuptools.build_meta"
