--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,22 @@
 [project]
 dependencies = [
-  "click>=8.2.1",
-  "fastapi[standard]>=0.116.1",
-  "ibis-framework[duckdb]>=10.8.0",
-  "jinja2>=3.1.0",
-  "pandas>=2.3.1",
-  "prometheus-fastapi-instrumentator>=7.1.0",
-  "pymc>=5.25.1",
-  "python-jose>=3.5.0",
-  "structlog>=25.4.0",
+  "click",
+  "ibis-framework[duckdb]",
+  "fastapi",
+  "uvicorn",
+  "python-jose",
+  "structlog",
+  "prometheus-fastapi-instrumentator",
+  "jinja2",
+  "httpx",
+  "numpy",
 ]
-description = "Add your description here"
+description = "A vibes CLI for pymc-vibes"
 name = "pymc-vibes"
-readme = "README.md"
-requires-python = ">=3.13"
 version = "0.1.0"
 
 [project.scripts]
-pv = "pymc_vibes.client.cli:main"
+vibes = "pymc_vibes.cli.main:main"
 
 [build-system]
 build-backend = "setuptools.build_meta"
