--- a/.env.server.example
+++ b/.env.server.example
@@ -1,4 +1,23 @@
-export AUTH_SECRET="your-strong-shared-secret"
-export LOG_LEVEL=INFO
-export LOG_JSON=false
-export SERVICE_NAME="pymc-vibes-api"
+AUTH_SECRET="your-strong-shared-secret"
+LOG_LEVEL=INFO
+LOG_JSON=false
+SERVICE_NAME="pymc-vibes-api"
+
+# DuckLake Configuration
+DUCKLAKE_NAME=pymc_vibes_ducklake
+
+# PostgreSQL Connection (for ducklake)
+PG_HOST=localhost
+PG_PORT=5432
+PG_DBNAME=ducklake_catalog
+PG_USER=user
+PG_PASSWORD=password
+
+# S3/MinIO Connection (for ducklake)
+S3_DATA_PATH=s3://ducklake
+S3_SECRET_NAME=minio_secret
+S3_KEY_ID=minioadmin
+S3_SECRET=minioadmin
+S3_ENDPOINT=minio:9000
+S3_URL_STYLE=path
+S3_USE_SSL=False
