--- a/.env.client.example
+++ b/.env.client.example
@@ -13,6 +13,6 @@ S3_DATA_PATH=s3://ducklake
 S3_SECRET_NAME=minio_secret
 S3_KEY_ID=minioadmin
 S3_SECRET=minioadmin
-S3_ENDPOINT=minio:9000
+S3_ENDPOINT=localhost:9000
 S3_URL_STYLE=path
 S3_USE_SSL=False
