mlflow for inferencedata cache baby!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ dependencies = [
   "numpy",
   "scipy>=1.16.2",
   "pymc>=5.25.1",
+  "mlflow>=3.4.0",
+  "pymc-marketing>=0.16.0",
+  "boto3>=1.40.35",
+  "psycopg2-binary>=2.9.10",
 ]
 description = "A vibes CLI for pymc-vibes"
 name = "pymc-vibes"
