--- a/.env.server.example
+++ b/.env.server.example
@@ -21,3 +21,11 @@ S3_SECRET=minioadmin
 S3_ENDPOINT=localhost:9000
 S3_URL_STYLE=path
 S3_USE_SSL=False
+
+# mflow configuration (leverages ducklake infra)
+MLFLOW_TRACKING_URI=postgresql://user:password@localhost:5432/mlflow
+MLFLOW_S3_ENDPOINT_URL=http://localhost:9000
+MLFLOW_S3_BUCKET_NAME=mlflow
+AWS_ENDPOINT_URL=http://localhost:9000
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin
