--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "pymc-marketing>=0.16.0",
   "boto3>=1.40.35",
   "psycopg2-binary>=2.9.10",
+  "ipykernel>=6.30.1",
 ]
 description = "A vibes CLI for pymc-vibes"
 name = "pymc-vibes"
